--- a/assets/images/icons/manifest.json
+++ b/assets/images/icons/manifest.json
@@ -1,61 +1,64 @@
 {
-	"name": "Odis Mobile App",
-	"short_name": "Odis",
-	"description": "Multi Purpose PWA Mobile App",
-	"scope": ".",
+	"name": "Easypay Mobile App",
+	"short_name": "Easypay",
+	"description": "Mobile App",
+	"scope": "/",
 	"orientation": "portrait",
 	"lang": "en-US",
-	"start_url": "/odis-html/app/",
+	"start_url": "/",
 	"background_color": "#ffffff",
 	"theme_color": "#ff8a65",
 	"display": "standalone",
 	"icons": [
 		{
-			"src": "android-icon-36x36.png",
-			"sizes": "36x36",
-			"type": "image/png",
-			"density": "0.75"
-		},
-		{
-			"src": "android-icon-48x48.png",
-			"sizes": "48x48",
-			"type": "image/png",
-			"density": "1.0"
-		},
-		{
-			"src": "android-icon-72x72.png",
-			"sizes": "72x72",
-			"type": "image/png",
-			"density": "1.5"
-		},
-		{
-			"src": "android-icon-96x96.png",
-			"sizes": "96x96",
-			"type": "image/png",
-			"density": "2.0"
-		},
-		{
-			"src": "android-icon-144x144.png",
-			"sizes": "144x144",
-			"type": "image/png",
-			"density": "3.0"
-		},
-		{
-			"src": "android-icon-192x192.png",
-			"sizes": "192x192",
-			"type": "image/png",
-			"density": "4.0"
-		},
-		{
-			"src": "android-icon-512x512.png",
-			"sizes": "512x512",
-			"type": "image/png"
-		},
-		{
-			"src": "maskable-icon-196x196.png",
-			"sizes": "196x196",
-			"type": "image/png",
-      "purpose": "any maskable"
-		}
+            "src":"./icon/icon_1024.png",
+            "sizes":"1024x1024",
+            "type":"image/png"
+        },
+        {
+            "src":"./icon/icon_512.png",
+            "sizes":"512x512",
+            "type":"image/png"
+        },
+        {
+            "src":"./icon/icon_384.png",
+            "sizes":"384x384",
+            "type":"image/png"
+        },
+        {
+            "src":"./icon/icon_256.png",
+            "sizes":"256x256",
+            "type":"image/png"
+        },
+        {
+            "src":"./icon/icon_192.png",
+            "sizes":"192x192",
+            "type":"image/png"
+        },
+        {
+            "src":"./icon/icon_128.png",
+            "sizes":"128x128",
+            "type":"image/png"
+        },
+        {
+            "src":"./icon/icon_96.png",
+            "sizes":"96x96",
+            "type":"image/png"
+        },
+        {
+            "src":"./icon/icon_64.png",
+            "sizes":"64x64",
+            "type":"image/png"
+        },
+        {
+            "src":"./icon/icon_32.png",
+            "sizes":"32x32",
+            "type":"image/png"
+        },
+        {
+            "src":"./icon/icon_16.png",
+            "sizes":"16x16",
+            "type":"image/png"
+        }
 	]
 }
